# dataviz

./: .env.example  .gitignore  App.tsx  CONTRIBUTING.md  README.md  components.json  eslint.config.js  i18n.ts  index.html  index.tsx  instrumentation.ts  metadata.json  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  proxy.ts  style.css  tailwind.config.js  tsconfig.json  vercel.json  vite-env.d.ts  vite.config.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/(protected)/: layout.tsx
app/(protected)/connections/: page.tsx
app/(protected)/dashboards/: page.tsx
app/(protected)/settings/: layout.tsx  page.tsx
app/(protected)/users/: page.tsx
app/api/app-datas/: route.ts
app/api/charts/: route.ts
app/api/clear-all/: route.ts
app/api/connections/: route.ts
app/api/dashboards/: route.ts
app/api/export-app-datas/: route.ts
app/api/health/: route.ts
app/api/import-app-datas/: route.ts
app/api/query-proxy/: route.ts
app/sign-in/: page.tsx
dataviz-app/: middleware.ts  next.config.ts  package-lock.json  package.json
dataviz-app/app/: globals.css  page.tsx
dataviz-app/src/api/: apiPlugin.ts
dataviz-app/src/i18n/: en.ts
drizzle/: 0000_init.sql  0001_rls_and_seed.sql  0002_seed_default_dashboard.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
lib/: auth.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: apiPlugin.ts  authApiPlugin.ts
src/api/interfaces/: chartRepositoryInterface.ts  connectionRepositoryInterface.ts  dbQueryProviderInterface.ts  objectRepositoryInterface.ts  queryDbProvider.ts  (+1 more)
src/db/: index.ts  schema.ts
src/i18n/: en.ts  fr.ts  i18n-server.ts  i18n.ts
src/shared/: constants.ts
(+256 files in other folders)
